// Vitest Snapshot v1

exports[`Dropdown > Dropdown baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-31515850=""
>
  <t-dropdown
    data-v-31515850=""
    mincolumnwidth="112"
    options="[object Object],[object Object],[object Object],[object Object]"
  >
    <t-button
      data-v-31515850=""
      variant="text"
    >
      <span
        class="tdesign-demo-dropdown__text"
        data-v-31515850=""
      >
         下拉菜单 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-31515850=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            data-v-31515850=""
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </t-button>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown buttonVue demo works fine 1`] = `
<div
  data-v-b123bb1e=""
>
  <t-dropdown
    data-v-b123bb1e=""
    mincolumnwidth="88"
    options="[object Object],[object Object],[object Object],[object Object]"
  >
    <t-button
      data-v-b123bb1e=""
      theme="default"
      variant="outline"
    >
      下拉菜单
    </t-button>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown customVue demo works fine 1`] = `
<div
  data-v-33c84f30=""
>
  <t-dropdown
    data-v-33c84f30=""
    mincolumnwidth="100"
    options="[object Object],[object Object],[object Object],[object Object]"
    placement="top-left"
    trigger="click"
  >
    <t-button
      data-v-33c84f30=""
      variant="text"
    >
      下拉菜单
    </t-button>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown disabledVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-503db2fb=""
>
  <t-dropdown
    data-v-503db2fb=""
    mincolumnwidth="112"
    options="[object Object],[object Object],[object Object],[object Object]"
  >
    <t-button
      data-v-503db2fb=""
      variant="text"
    >
      <span
        class="tdesign-demo-dropdown__text"
        data-v-503db2fb=""
      >
         下拉菜单 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-503db2fb=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            data-v-503db2fb=""
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </t-button>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown eventVue demo works fine 1`] = `
<div>
  <t-dropdown
    mincolumnwidth="88"
    options="[object Object],[object Object],[object Object],[object Object]"
  >
    <t-button
      variant="text"
    >
      下拉菜单
    </t-button>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown longVue demo works fine 1`] = `
<div
  data-v-1c484a7b=""
>
  <t-dropdown
    data-v-1c484a7b=""
    maxheight="400"
    mincolumnwidth="88"
    options="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  >
    <t-button
      data-v-1c484a7b=""
      variant="text"
    >
      下拉菜单
    </t-button>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown multipleVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-cbef96e2=""
>
  <t-dropdown
    data-v-cbef96e2=""
    maxcolumnwidth="120"
    options="[object Object],[object Object],[object Object],[object Object]"
  >
    <t-button
      data-v-cbef96e2=""
      variant="text"
    >
      <span
        class="tdesign-demo-dropdown__text"
        data-v-cbef96e2=""
      >
         下拉菜单 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-cbef96e2=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            data-v-cbef96e2=""
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </t-button>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown slotVue demo works fine 1`] = `
<div>
  <t-dropdown
    maxheight="120"
    mincolumnwidth="88"
    popupprops="[object Object]"
    trigger="click"
  >
    <t-button
      variant="text"
    >
      下拉菜单
    </t-button>
    <t-dropdown-menu
      slot="dropdown"
    >
      <t-dropdown-item
        value="1"
      >
        操作一
      </t-dropdown-item>
      <t-dropdown-item
        value="2"
      >
        操作二
      </t-dropdown-item>
      <t-dropdown-item
        value="3"
      >
        操作三
      </t-dropdown-item>
      <t-dropdown-item
        value="4"
      >
        操作四
      </t-dropdown-item>
      <t-dropdown-item
        value="5"
      >
        操作五
      </t-dropdown-item>
    </t-dropdown-menu>
  </t-dropdown>
</div>
`;

exports[`Dropdown > Dropdown splitVue demo works fine 1`] = `
<div
  data-v-7fd82e2b=""
>
  <t-dropdown
    data-v-7fd82e2b=""
    mincolumnwidth="88"
    options="[object Object],[object Object],[object Object],[object Object]"
  >
    <t-button
      data-v-7fd82e2b=""
      theme="default"
      variant="outline"
    >
      下拉菜单
    </t-button>
  </t-dropdown>
</div>
`;
